# gh-trends

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: repo-deep-dive.md  trend-researcher.md
.claude/skills/daily-digest/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/output/: SKILL.md
.claude/skills/repo-eval/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/trend-fetch/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
digests/: 2026-04-10-overall-weekly.json  2026-04-10-python-weekly.json  2026-04-11-overall-weekly.json  2026-04-11-python-weekly.json  2026-04-12-overall-weekly.json  2026-04-12-python-weekly.json  2026-04-13-overall-weekly.json  2026-04-13-python-weekly.json  2026-04-14-overall-weekly.json  2026-04-14-python-weekly.json
src/gh_trends/: __init__.py  cli.py  clusterer.py  differ.py  fetcher.py  models.py  server.py  summarizer.py
tests/: conftest.py  test_cli.py  test_clusterer.py  test_differ.py  test_fetcher.py  test_models.py  test_server.py  test_summarizer.py
tests/fixtures/: trending_minimal.html
